--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,10 +18,12 @@ h3 {
   margin: 0;
   padding-bottom: 10px;
   font-size: 18px;
+  font-weight: normal;
 }
 
 h4 {
   font-size: 14px;
+  font-weight: normal;
 }
 
 h4 a,
@@ -31,7 +33,7 @@ h1 a {
 }
 
 p#addTodo {
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 /* Styles for the modal */
@@ -107,8 +109,13 @@ p#addTodo {
   border-radius: 3px;
 }
 
-.todo:hover {
+.todo:hover, {
   background-color: lightgray;
+}
+
+.todo-text:hover,
+#addTodo {
+  color: #6EA7CB;
 }
 
 .todo button {
