--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -119,15 +119,15 @@ p#addTodo {
 }
 
 .todo button {
-  background-color: #f44336;
-  color: #fff;
+  background-color: #fff;
+  color: #A6A9AB;
   border: none;
   border-radius: 3px;
   cursor: pointer;
 }
 
 .todo button:hover {
-  background-color: #d32f2f;
+  background-color: #E16F63;
 }
 
 .todo.completed {
