made trashcan icons darker

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -131,7 +131,7 @@ p#addTodo {
 
 .todo button {
   background-color: #f0f0f0;
-  color: #A6A9AB;
+  color: #888B8E;
   border: none;
   border-radius: 3px;
   cursor: pointer;
